@@ -60,6 +60,7 @@ Version 1.0.xxxx (February xxth 2014)
 - Implemented: SMASpot, Temperature
 - Implemented: OTGW, status switches
 - Implemented: Portuguese translation (Thanks to maluko!)
+- Implemented: Report for RFXMeter Water
 
 Version 1.0.1396 (January 18th 2014)
 - Implemented: new commandline option to specify www root folder (-wwwroot)
